--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
 }
+
 body {
   background-color: rgb(255, 255, 255);
   font-family: "Space Mono", monospace;
@@ -80,10 +81,20 @@ ul {
   box-sizing: border-box;
   font-family: sans-serif;
 }
-
+/* Utilities */
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
 /*HEADER (Katia)*/
 .header {
-  display: flex;
   width: 100%;
   height: 85px;
   min-height: 85px;
@@ -230,7 +241,7 @@ ul {
   padding: 20px;
 }
 .cTitle {
-  font-size: 24px;
+  font-size: 26px;
   line-height: 140%;
   margin-bottom: 20px;
   text-transform: uppercase;
