--- a/css/style.css
+++ b/css/style.css
@@ -82,81 +82,51 @@ ul {
   font-family: sans-serif;
 }
 /* Utilities */
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 40px;
-}
-.flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
+
 /*HEADER (Katia)*/
 .header {
-  width: 100%;
-  height: 85px;
-  min-height: 85px;
-  box-sizing: border-box;
-  padding: 0px 20px;
-}
-
-.navbar {
+  overflow: hidden;
   background-color: #ffffff;
-  height: 70px;
-  display: flex;
-  flex-direction: column;
-  max-height: none;
-  max-width: 1280px;
-  width: 100%;
-  z-index: 0;
-  position: static;
-  background: none 0% 0% / auto transparent;
-  margin: auto;
-  padding: 0px;
-}
-.nav ul {
-  display: flex;
+  padding: 20px 10px;
 }
 
-.nav a {
-  padding: 10px;
-  margin: 0 5px;
-  font-family: "Work Sans", sans-serif;
-  font-size: 12px;
-  display: flex;
-  font-weight: 100;
-  color: #161616;
-  cursor: pointer;
-  padding: 5px, 7px;
-  margin-right: 10px;
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
   text-decoration: none;
+  font-size: 12px;
+  line-height: 25px;
+  font-family: "Work Sans", sans-serif;
 }
-.navbar a:hover {
+
+.header-right {
+  float: right;
+}
+.header-right a:hover {
   border-bottom: 3px #4a50bb solid;
 }
-
-.navbar .flex {
-  justify-content: space-between;
-}
-
-.navbar img {
-  width: 97px;
-  cursor: pointer;
-}
-
-.navbar button {
+.header-right button {
   border: 1px solid #4a50bb;
   font-weight: 500;
   outline: none;
   background: #4a50bb;
   color: #fff;
-  padding: 10px;
+  padding: 15px;
   border-radius: 3px;
   cursor: pointer;
 }
-
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
 /* BEGIN RESULT PART */
 
 .ourResult {
@@ -269,117 +239,116 @@ ul {
   font-weight: 300;
 }
 
-/* successes stort */
+/* successes story */
 .suc-sto {
-background-color: rgba(211, 211, 211, 0.322);
-width: 1390px;
-height: 450px;
-border: 0px solid black;
-padding-left: 0px;
-padding-top:5px ;
-padding-bottom:26px ;
-padding-right: 32px;
-margin: 20px;
+  background-color: rgba(211, 211, 211, 0.322);
+  width: 1390px;
+  height: 450px;
+  border: 0px solid black;
+  padding-left: 0px;
+  padding-top: 5px;
+  padding-bottom: 26px;
+  padding-right: 32px;
+  margin: 20px;
 }
 
 .container {
-width: 100%;
-max-width: 100%;
-min-height: 500px;
-box-sizing: border-box;
-text-align: center;
-box-shadow: rgba(0, 0, 0, 0.267) 0px 0px 53px;
-padding: 50px;
-margin-top: -35%;
-margin-bottom: 3%;
-margin-left: -7%;
-margin-right: 7%;
-font-size: 0%;
+  width: 100%;
+  max-width: 100%;
+  min-height: 500px;
+  box-sizing: border-box;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.267) 0px 0px 53px;
+  padding: 50px;
+  margin-top: -35%;
+  margin-bottom: 3%;
+  margin-left: -7%;
+  margin-right: 7%;
+  font-size: 0%;
 }
-    
+
 .demo {
-text-align: center;
-color: blue;
-font-size: 24px;
-font-style: uppercase;
-margin-top: 20%;
+  text-align: center;
+  color: blue;
+  font-size: 24px;
+  font-style: uppercase;
+  margin-top: 20%;
 }
 
 .pic {
-width: 250px;
-height: 255px;
-margin: 100px;
-float: left;
-margin: auto auto 20px;
-background-position: center center;
-filter: grayscale(100%);
-float: left;
-margin-top: 4%;
-margin-left: 4%;
-border-radius: 50%;
-margin-right: 3%;
-}
-    
-.name {
-color:blue;
-margin-left: 25%;
-margin-right: 9%;
-font-size: 18px;
-margin-top: 6%;
+  width: 250px;
+  height: 255px;
+  margin: 100px;
+  float: left;
+  margin: auto auto 20px;
+  background-position: center center;
+  filter: grayscale(100%);
+  float: left;
+  margin-top: 4%;
+  margin-left: 4%;
+  border-radius: 50%;
+  margin-right: 3%;
 }
 
- .pos {
-margin-left: 25%;
-margin-right: 9%;
+.name {
+  color: blue;
+  margin-left: 25%;
+  margin-right: 9%;
+  font-size: 18px;
+  margin-top: 6%;
 }
-    
+
+.pos {
+  margin-left: 25%;
+  margin-right: 9%;
+}
+
 .bio {
-    
-margin-top: 2%;
-margin-left: 25%;
-margin-right: 9%;
-margin-bottom: 2%;
+  margin-top: 2%;
+  margin-left: 25%;
+  margin-right: 9%;
+  margin-bottom: 2%;
 }
-    
+
 .demo {
-text-align: center;
-color: rgba(39, 39, 219, 0.911);
-margin-top: 3% ;
+  text-align: center;
+  color: rgba(39, 39, 219, 0.911);
+  margin-top: 3%;
 }
-    
+
 .pic2 {
-width: 250px;
-height: 250px;
-margin: 100px;
-float: left;
-margin: auto auto 20px;
-background-position: center center;
-filter: grayscale(100%);
-float: left;
-margin-top: -18%;
-margin-left: 43%;
-border-radius: 50%;
-margin-bottom:  0%; 
-border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  margin: 100px;
+  float: left;
+  margin: auto auto 20px;
+  background-position: center center;
+  filter: grayscale(100%);
+  float: left;
+  margin-top: -18%;
+  margin-left: 43%;
+  border-radius: 50%;
+  margin-bottom: 0%;
+  border-radius: 50%;
 }
 
 .name2 {
-color:blue;
-margin-left: 0%;
-margin-left: 70%;
-font-size: 18px;
-margin-top: -21%;
+  color: blue;
+  margin-left: 0%;
+  margin-left: 70%;
+  font-size: 18px;
+  margin-top: -21%;
 }
 
 .pos2 {
-margin-left: 70%;
-margin-right: 9%;
+  margin-left: 70%;
+  margin-right: 9%;
 }
-    
+
 .bio2 {
-margin-top: 2%;
-margin-left: 70%;
-margin-right: 9%;
+  margin-top: 2%;
+  margin-left: 70%;
+  margin-right: 9%;
 }
-    
+
 /*END RESULT PART */
