--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ ul {
   background-color: #ffffff;
   padding: 20px 10px;
 }
+.logo img {
+  height: 52px;
+  width: auto;
+  cursor: pointer;
+}
 
 .header a {
   float: left;
