--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   background-color: rgb(255, 255, 255);
   font-family: "Space Mono", monospace;
   max-width: 100vw;
+  overflow: hidden;
 }
 
 main {
