--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ ul {
   line-height: 140%;
   margin-bottom: 20px;
   text-transform: uppercase;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Work Sans bold", sans-serif;
   font-weight: 700;
   color: rgb(28, 34, 148);
   text-align: left;
