--- a/css/style.css
+++ b/css/style.css
@@ -1,428 +1,603 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  background-color: rgb(255, 255, 255);
-  font-family: "Space Mono", monospace;
-  max-width: 100vw;
-  overflow-x: hidden;
+    background-color: rgb(255, 255, 255);
+    font-family: "Space Mono", monospace;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 main {
-  display: flex;
-  flex: 1 0 auto;
-  flex-direction: column;
-  margin: 0px auto;
-  -moz-box-flex: 1;
-  width: 100%;
-  box-sizing: border-box;
+    display: flex;
+    flex: 1 0 auto;
+    flex-direction: column;
+    margin: 0px auto;
+    -moz-box-flex: 1;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-div, img , section, h2, h1 ,p, h3{
-  margin: 0;
-  margin-bottom: 0px;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font-style: normal;
-  vertical-align: baseline;
-  text-decoration: none;
-  box-sizing: border-box;
-  font-family: sans-serif;
+div,
+img,
+section,
+h2,
+h1,
+p,
+h3 {
+    margin: 0;
+    margin-bottom: 0px;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font-style: normal;
+    vertical-align: baseline;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
+
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
+
 
 /* Utilities */
 
+
 /*HEADER (Katia)*/
+
 .header {
-  overflow: hidden;
-  background-color: #ffffff;
-  padding: 20px 10px;
+    overflow: hidden;
+    background-color: #ffffff;
+    padding: 20px 10px;
 }
+
 .container_header {
-  width: 1440px;
-  margin: 0 auto;
-  padding: 0 40px;
+    width: 1440px;
+    margin: 0 auto;
+    padding: 0 40px;
 }
 
 .logo img {
-  height: 52px;
-  width: auto;
-  cursor: pointer;
+    height: 52px;
+    width: auto;
+    cursor: pointer;
 }
 
 .header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 25px;
-  font-family: "Work Sans", sans-serif;
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 25px;
+    font-family: "Work Sans", sans-serif;
 }
 
 .header-right {
-  float: right;
+    float: right;
 }
+
 .header-right a:hover {
-  border-bottom: 3px #4a50bb solid;
+    border-bottom: 3px #4a50bb solid;
 }
+
 .header-right button {
-  border: 1px solid #4a50bb;
-  font-weight: 500;
-  outline: none;
-  background: #4a50bb;
-  color: #fff;
-  padding: 15px;
-  border-radius: 3px;
-  cursor: pointer;
+    border: 1px solid #4a50bb;
+    font-weight: 500;
+    outline: none;
+    background: #4a50bb;
+    color: #fff;
+    padding: 15px;
+    border-radius: 3px;
+    cursor: pointer;
 }
+
 @media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
-  }
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .header-right {
+        float: none;
+    }
 }
+
+
+/* OUR PROGRAM PART */
+
+.our-program {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 100%;
+    padding: 50px 20px;
+    position: relative;
+    box-shadow: none;
+    background: none;
+    z-index: 1;
+    flex: 0 0 auto;
+    max-width: 1280px;
+    margin: auto;
+}
+
+.explanation-wrapper {
+    width: 100%;
+    display: flex;
+    margin: 50px 0px;
+}
+
+.explanation {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    align-items: flex-start;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    padding: 0px 50px 0px 0px;
+    width: 50%;
+    order: 1;
+}
+
+.op-title {
+    padding: 0;
+    font-size: 20px;
+    line-height: 140%;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-family: "Work Sans Bold", sans-serif;
+    font-weight: 1000;
+    color: rgb(28, 34, 148);
+    text-align: left;
+    max-width: none;
+}
+
+.program-info {
+    padding: 0;
+    color: rgb(45, 48, 55);
+    text-align: left;
+    max-width: 470px;
+    line-height: 160%;
+    font-size: 16px;
+    font-family: "Space Mono", monospace;
+    margin: 0px;
+    word-break: break-word;
+    font-weight: 300;
+    margin: 0px 0px 20px 0px;
+}
+
+.explanation b {
+    color: rgb(74, 80, 187);
+    font-family: "Space Mono", monospace;
+}
+
+.discover-button {
+    font-size: 12px;
+    line-height: 160%;
+    text-decoration: none;
+    font-weight: 600;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 10px 20px;
+    cursor: pointer;
+    text-transform: uppercase;
+    -webkit-box-align: center;
+    align-items: center;
+    font-family: "Work Sans Bold", sans-serif;
+    background-color: transparent;
+    color: rgb(74, 80, 187);
+    appearance: auto;
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-indent: 0px;
+    text-shadow: none;
+    text-align: center;
+    margin: 0em;
+    box-sizing: border-box;
+    margin: 0;
+    margin-left: -20px;
+}
+
+.arrow-icon {
+    display: inline-block;
+    font-size: inherit;
+    height: 1em;
+    overflow: visible;
+    vertical-align: -0.125em;
+    width: 0.875em;
+    overflow: visible;
+    margin-left: 6px;
+    margin-top: -2px;
+}
+
+.exp-img-outer {
+    display: flex;
+    width: 50%;
+    height: 100%;
+    min-height: 400px;
+    order: 2;
+    padding: 0px 0px 0px 50px;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+}
+
+.exp-img {
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    box-shadow: none;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    -webkit-box-flex: 0;
+    height: 100%;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    max-height: none;
+    max-width: none;
+    width: 100%;
+    z-index: auto;
+    position: relative;
+    background: url(/img/ourprogram.jpg) 0% 0% / cover transparent;
+    flex: 0 1 100%;
+    margin: 0px;
+    padding: 0px;
+    min-height: 300px;
+}
+
+
 /* BEGIN RESULT PART */
 
 .ourResult {
-  display: flex;
-  -moz-box-pack: center;
-  justify-content: center;
-  width: 100%;
-  padding: 0px;
-  position: relative;
-  box-shadow: none;
-  background: rgb (0, 0, 0, 0) none repeat scroll 0% 0%;
-  z-index: 1;
-  flex: 0 0 auto;
+    display: flex;
+    -moz-box-pack: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0px;
+    position: relative;
+    box-shadow: none;
+    background: rgb (0, 0, 0, 0) none repeat scroll 0% 0%;
+    z-index: 1;
+    flex: 0 0 auto;
 }
 
 .resultLayout {
-  display: flex;
-  flex-direction: column;
-  -moz-box-pack: center;
-  justify-content: center;
-  -moz-box-align: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1280px;
-  padding: 10px 0px;
-  margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    -moz-box-pack: center;
+    justify-content: center;
+    -moz-box-align: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1280px;
+    padding: 10px 0px;
+    margin: 0px auto;
 }
 
 .resultBox {
-  display: flex;
-  flex-direction: column;
-  -moz-box-align: center;
-  align-items: center;
-  box-shadow: rgb(0, 0, 0, 0.08) 0px 0px 53px;
-  padding: 50px;
-  margin-bottom: 50px;
-}
-
-.resultInfo {
-  display: flex;
-  flex-direction: column;
-  -moz-box-align: center;
-  align-items: center;
-  width: 100%;
-  margin: 0px 0px 50px;
-}
-
-.title {
-  font-size: 24px;
-  line-height: 140%;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  font-family: "Work Sans Bold", sans-serif;
-  font-weight: 700;
-  color: rgb(28, 34, 148);
-  text-align: left;
-  max-width: none;
-}
-
-.titleDefinition {
-  color: rgb(45, 48, 55);
-  text-align: center;
-  max-width: 800px;
-  line-height: 160%;
-  font-size: 16px;
-  font-family: "Space Mono", monospace;
-  margin: 0px;
-  white-space: pre-wrap;
-  word-break: break-word;
-  font-weight: 300;
-}
-
-.tableResult {
-  display: flex;
-  width: 100%;
-  -moz-box-pack: justify;
-  justify-content: space-between;
-}
-
-.columnOfTable {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(74, 80, 187);
-  width: 30%;
-  padding: 20px;
-}
-
-.cTitle {
-  font-size: 26px;
-  line-height: 140%;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  font-family: "Work Sans Bold", sans-serif;
-  font-weight: 700;
-  color: rgb(255, 255, 255);
-  text-align: left;
-  max-width: none;
-}
-
-.cParag {
-  color: white;
-  text-align: left;
-  max-width: none;
-  line-height: 160%;
-  font-size: 16px;
-  font-family: "Space Mono", monospace;
-  margin: 0px;
-  white-space: pre-wrap;
-  word-break: break-word;
-  font-weight: 300;
-}
-/*Core Values*/
-
-.padding-core-values{
-  display: flex;
-  -moz-box-pack: end;
-  justify-content: flex-end;
-  width: 100%;
-  padding: 50px 0px;
-  position: relative;
-  box-shadow: none;
-  background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%;
-  z-index: 1;
-  flex: 0 0 auto;
-}
-
-.margin-core-values{
-  display: flex;
-  flex-direction: column;
-  -moz-box-pack: center;
-  justify-content: center;
-  -moz-box-align: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1280px;
-  padding: 10px 0px;
-  margin: 0px;
-}
-
-.table-core-values{
-  display: flex;
-  background-color: rgb(248, 249, 252);
-  padding: 100px;
-  flex-direction: column;}
-
-.title-core-values{
-  font-size: 24px;
-  line-height: 140%;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  font-family: "Work Sans bold", sans-serif;
-  font-weight: 700;
-  color: rgb(28, 34, 148);
-  text-align: left;
-  max-width: none;}
-
-.box-core-values{display: flex;
-  flex-wrap: wrap;
-  -moz-box-flex: 1;
-  flex-grow: 1;
-  -moz-box-pack: justify;
-  justify-content: space-between;}
-
-  .box-core-values > .one-value2:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    -moz-box-align: center;
+    align-items: center;
+    box-shadow: rgb(0, 0, 0, 0.08) 0px 0px 53px;
+    padding: 50px;
     margin-bottom: 50px;
 }
 
-.one-value{
-  display: flex;
-  width: 40%;
-  flex-direction: column;
-  align-items: flex-start;}
+.resultInfo {
+    display: flex;
+    flex-direction: column;
+    -moz-box-align: center;
+    align-items: center;
+    width: 100%;
+    margin: 0px 0px 50px;
+}
 
-  .one-value > img {
+.title {
+    font-size: 24px;
+    line-height: 140%;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-family: "Work Sans Bold", sans-serif;
+    font-weight: 700;
+    color: rgb(28, 34, 148);
+    text-align: left;
+    max-width: none;
+}
+
+.titleDefinition {
+    color: rgb(45, 48, 55);
+    text-align: center;
+    max-width: 800px;
+    line-height: 160%;
+    font-size: 16px;
+    font-family: "Space Mono", monospace;
+    margin: 0px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-weight: 300;
+}
+
+.tableResult {
+    display: flex;
+    width: 100%;
+    -moz-box-pack: justify;
+    justify-content: space-between;
+}
+
+.columnOfTable {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(74, 80, 187);
+    width: 30%;
+    padding: 20px;
+}
+
+.cTitle {
+    font-size: 26px;
+    line-height: 140%;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-family: "Work Sans Bold", sans-serif;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    text-align: left;
+    max-width: none;
+}
+
+.cParag {
+    color: white;
+    text-align: left;
+    max-width: none;
+    line-height: 160%;
+    font-size: 16px;
+    font-family: "Space Mono", monospace;
+    margin: 0px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-weight: 300;
+}
+
+
+/*Core Values*/
+
+.padding-core-values {
+    display: flex;
+    -moz-box-pack: end;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 50px 0px;
+    position: relative;
+    box-shadow: none;
+    background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%;
+    z-index: 1;
+    flex: 0 0 auto;
+}
+
+.margin-core-values {
+    display: flex;
+    flex-direction: column;
+    -moz-box-pack: center;
+    justify-content: center;
+    -moz-box-align: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1280px;
+    padding: 10px 0px;
+    margin: 0px;
+}
+
+.table-core-values {
+    display: flex;
+    background-color: rgb(248, 249, 252);
+    padding: 100px;
+    flex-direction: column;
+}
+
+.title-core-values {
+    font-size: 24px;
+    line-height: 140%;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-family: "Work Sans bold", sans-serif;
+    font-weight: 700;
+    color: rgb(28, 34, 148);
+    text-align: left;
+    max-width: none;
+}
+
+.box-core-values {
+    display: flex;
+    flex-wrap: wrap;
+    -moz-box-flex: 1;
+    flex-grow: 1;
+    -moz-box-pack: justify;
+    justify-content: space-between;
+}
+
+.box-core-values>.one-value2:nth-child(1) {
+    margin-bottom: 50px;
+}
+
+.one-value {
+    display: flex;
+    width: 40%;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.one-value>img {
     margin-bottom: 20px;
     min-height: 70px;
     object-fit: contain;
 }
-.image-one-value{
-  width: auto;
-  height: auto;
-  object-fit: fill;
-  border-radius: 0px;}
-.title-one-value{
-  font-size: 20px;
-  line-height: 140%;
-  margin-bottom: 20px;
-  text-transform: none;
-  font-family: "Work Sans", sans-serif;
-  font-weight: 700;
-  color: rgb(28, 34, 148);
-  text-align: left;
-  max-width: none;}
-.info-one-value{
-  color: rgb(45, 48, 55);
-  text-align: left;
-  max-width: none;
-  line-height: 160%;
-  font-size: 16px;
-  font-family: "Space Mono", monospace;
-  margin: 0px;
-  white-space: pre-wrap;
-  word-break: break-word;
-  font-weight: 300;}
+
+.image-one-value {
+    width: auto;
+    height: auto;
+    object-fit: fill;
+    border-radius: 0px;
+}
+
+.title-one-value {
+    font-size: 20px;
+    line-height: 140%;
+    margin-bottom: 20px;
+    text-transform: none;
+    font-family: "Work Sans", sans-serif;
+    font-weight: 700;
+    color: rgb(28, 34, 148);
+    text-align: left;
+    max-width: none;
+}
+
+.info-one-value {
+    color: rgb(45, 48, 55);
+    text-align: left;
+    max-width: none;
+    line-height: 160%;
+    font-size: 16px;
+    font-family: "Space Mono", monospace;
+    margin: 0px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-weight: 300;
+}
+
 
 /* successes story */
 
 .padding-suc-sto {
-  display: flex;
-  -moz-box-pack: center;
-  justify-content: center;
-  width: 100%;
-  padding: 0px;
-  position: relative;
-  box-shadow: none;
-  background: rgb (0, 0, 0, 0) none repeat scroll 0% 0%;
-  z-index: 1;
-  flex: 0 0 auto;
+    display: flex;
+    -moz-box-pack: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0px;
+    position: relative;
+    box-shadow: none;
+    background: rgb (0, 0, 0, 0) none repeat scroll 0% 0%;
+    z-index: 1;
+    flex: 0 0 auto;
 }
 
 .suc-sto {
-  background-color: rgba(211, 211, 211, 0.322);
-  width: 1390px;
-  height: 450px;
-  border: 0px solid black;
-  padding-left: 0px;
-  padding-top: 5px;
-  padding-bottom: 26px;
-  padding-right: 32px;
-  margin: 20px;
+    background-color: rgba(211, 211, 211, 0.322);
+    width: 1390px;
+    height: 450px;
+    border: 0px solid black;
+    padding-left: 0px;
+    padding-top: 5px;
+    padding-bottom: 26px;
+    padding-right: 32px;
+    margin: 20px;
 }
 
 .container {
-  width: 100%;
-  max-width: 100%;
-  min-height: 500px;
-  box-sizing: border-box;
-  text-align: center;
-  box-shadow: rgba(0, 0, 0, 0.267) 0px 0px 53px;
-  padding: 50px;
-  margin-top: -35%;
-  margin-bottom: 3%;
-  margin-left: -7%;
-  margin-right: 7%;
-  font-size: 0%;
+    width: 100%;
+    max-width: 100%;
+    min-height: 500px;
+    box-sizing: border-box;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.267) 0px 0px 53px;
+    padding: 50px;
+    margin-top: -35%;
+    margin-bottom: 3%;
+    margin-left: -7%;
+    margin-right: 7%;
+    font-size: 0%;
 }
 
 .demo {
-  text-align: center;
-  color: blue;
-  font-size: 24px;
-  font-style: uppercase;
-  margin-top: 20%;
+    text-align: center;
+    color: blue;
+    font-size: 24px;
+    font-style: uppercase;
+    margin-top: 20%;
 }
 
 .pic {
-  width: 250px;
-  height: 255px;
-  margin: 100px;
-  float: left;
-  margin: auto auto 20px;
-  background-position: center center;
-  filter: grayscale(100%);
-  float: left;
-  margin-top: 4%;
-  margin-left: 4%;
-  border-radius: 50%;
-  margin-right: 3%;
+    width: 250px;
+    height: 255px;
+    margin: 100px;
+    float: left;
+    margin: auto auto 20px;
+    background-position: center center;
+    filter: grayscale(100%);
+    float: left;
+    margin-top: 4%;
+    margin-left: 4%;
+    border-radius: 50%;
+    margin-right: 3%;
 }
 
 .name {
-  color: blue;
-  margin-left: 25%;
-  margin-right: 9%;
-  font-size: 18px;
-  margin-top: 6%;
+    color: blue;
+    margin-left: 25%;
+    margin-right: 9%;
+    font-size: 18px;
+    margin-top: 6%;
 }
 
 .pos {
-  margin-left: 25%;
-  margin-right: 9%;
+    margin-left: 25%;
+    margin-right: 9%;
 }
 
 .bio {
-  margin-top: 2%;
-  margin-left: 25%;
-  margin-right: 9%;
-  margin-bottom: 2%;
+    margin-top: 2%;
+    margin-left: 25%;
+    margin-right: 9%;
+    margin-bottom: 2%;
 }
 
 .demo {
-  text-align: center;
-  color: rgba(39, 39, 219, 0.911);
-  margin-top: 3%;
+    text-align: center;
+    color: rgba(39, 39, 219, 0.911);
+    margin-top: 3%;
 }
 
 .pic2 {
-  width: 250px;
-  height: 250px;
-  margin: 100px;
-  float: left;
-  margin: auto auto 20px;
-  background-position: center center;
-  filter: grayscale(100%);
-  float: left;
-  margin-top: -18%;
-  margin-left: 43%;
-  border-radius: 50%;
-  margin-bottom: 0%;
-  border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    margin: 100px;
+    float: left;
+    margin: auto auto 20px;
+    background-position: center center;
+    filter: grayscale(100%);
+    float: left;
+    margin-top: -18%;
+    margin-left: 43%;
+    border-radius: 50%;
+    margin-bottom: 0%;
+    border-radius: 50%;
 }
 
 .name2 {
-  color: blue;
-  margin-left: 0%;
-  margin-left: 70%;
-  font-size: 18px;
-  margin-top: -21%;
+    color: blue;
+    margin-left: 0%;
+    margin-left: 70%;
+    font-size: 18px;
+    margin-top: -21%;
 }
 
 .pos2 {
-  margin-left: 70%;
-  margin-right: 9%;
+    margin-left: 70%;
+    margin-right: 9%;
 }
 
 .bio2 {
-  margin-top: 2%;
-  margin-left: 70%;
-  margin-right: 9%;
+    margin-top: 2%;
+    margin-left: 70%;
+    margin-right: 9%;
 }
+
 
 /*END RESULT PART */
