--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,7 @@ ul {
     margin: 20px;
 }
 
-.container {
+.container1 {
     width: 100%;
     max-width: 100%;
     min-height: 500px;
@@ -515,7 +515,7 @@ ul {
     font-size: 0%;
 }
 
-.demo {
+.demo3 {
     text-align: center;
     color: blue;
     font-size: 24px;
