--- a/css/style.css
+++ b/css/style.css
@@ -547,6 +547,7 @@ ul {
   margin-left: 25%;
   margin-right: 9%;
   margin-bottom: 2%;
+  font-family:"Space Mono", monospace;
 }
 
 .pic2 {
@@ -582,6 +583,7 @@ ul {
   margin-top: 2%;
   margin-left: 70%;
   margin-right: 9%;
+  font-family:"Space Mono", monospace;
 }
 
 /* our partners */
