updated css for our partners
Removed "mereging" added "font- color"

--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ ul {
 
 .demo1 {
   text-align: center;
-  color: blue;
+  color: rgb(28, 34, 148);
   font-size: 24px;
   font-style: uppercase;
   margin-top: 3%;
@@ -528,7 +528,7 @@ ul {
 }
 
 .name {
-  color: blue;
+  color: rgb(28, 34, 148);
   margin-left: 22%;
   margin-right: 9%;
   font-size: 18px;
@@ -540,6 +540,7 @@ ul {
   margin-left: 22%;
   margin-right: 9%;
   font-size: 15px;
+  color: #4A50BB;
 }
 
 .bio {
@@ -566,7 +567,7 @@ ul {
 }
 
 .name2 {
-  color: blue;
+  color: rgb(28, 34, 148);
   margin-left: 75%;
   font-size: 18px;
   margin-top: -22%;
@@ -577,6 +578,7 @@ ul {
   margin-left: 70%;
   margin-right: 9%;
   font-size: 15px;
+  color: #4A50BB;
 }
 
 .bio2 {
@@ -600,7 +602,6 @@ ul {
   background: none;
   z-index: 1;
   flex: 0 0 auto;
-  margin-top: 20%;
 }
 
 .our-partners-wrapper {
@@ -648,7 +649,7 @@ ul {
   color: rgb(28, 34, 148);
   text-align: left;
   max-width: none;
-}
+  }
 
 .become-partner {
   display: inline-flex;
